--- a/index.html
+++ b/index.html
@@ -1,10 +1,46 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Title</title>
+    <meta charset="utf-8" />
+    <meta name="description" content="My first website with JavaScript" />
+    <meta name="keywords" content="mths, ics2o" />
+    <meta name="author" content="Jaden Plugowsky" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.deep_purple-indigo.min.css" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <title>JavaScript Website</title>
   </head>
   <body>
-    <p>Paragraph</p>
-    <script>alert('alert')</script>
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <script>
+      function buttonOneClicked() {
+        alert('Hello, World!')
+      }
+    </script>
+    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+      <header class="mdl-layout__header">
+        <div class="mdl-layout__header-row">
+          <span class="mdl-layout-title">JavaScript Website</span>
+        </div>
+      </header>
+      <main class="mdl-layout__content">
+        <br>
+        <div class="mdl-content">Press the button.</div>
+        <br>
+        <!-- Colored FAB button with ripple -->
+        <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored" id="buttonOne" onclick="buttonOneClicked()">
+          <i class="material-icons">add</i>
+        </button>
+        <br>
+        <br>
+        <br>
+        <a href="./index2.html">Page 2</a>
+      </main>
+    </div>
   </body>
 </html>
