--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="mdl-content">Press the button.</div>
         <br>
         <!-- Colored FAB button with ripple -->
-        <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored" id="buttonOne" onclick="buttonOneClicked()">
+        <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored" id="button-one" onclick="buttonOneClicked()">
           <i class="material-icons">add</i>
         </button>
         <br>
