--- a/index2.html
+++ b/index2.html
@@ -34,14 +34,14 @@
       <main class="mdl-layout__content">
         <br>
         <!-- Colored raised button with ripple -->
-        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored" onclick="buttonTwoClicked()" id="buttonTwo">
+        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored" onclick="buttonTwoClicked()" id="button-two">
           Verify Password
         </button>
         <br>
         <br>
         <br>
         <!-- Raised button with ripple -->
-        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect" onclick="buttonThreeClicked()" id="buttonThree">
+        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect" onclick="buttonThreeClicked()" id="button-three">
           Do not press this button
         </button>
         <br>
